Final Adjustments implemented, all pages, imgs

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,8 @@
     </header>
 
     <section class="container-fluid">
-        <div class="container-sm">
+
+        <div class="container-sm contact-form">
             <div class="row bg-color-contact">
                 <div class="col">
                     <h5 class="uppercase text-center contact-title">Contact us!</h5>
@@ -73,27 +74,73 @@
 
         <div class="address">
             <p>SafeGyn</p>
-            <p>XXI, Jamestown Park Road, Dublin 35</p> 
+            <p>XXI, Jamestown Park Road, Dublin 35</p>
             <p>Dublin Co. Dublin, Ireland</p>
             <p>Phone: +353 1 89 57 60 00</p>
         </div>
+
+        <div class="container-fluid cards covid-measures">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4 g-4">
+                <div class="col-sm-3">
+                    <div class="card card-block text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-head-side-mask" aria-hidden="true"></i></h5>
+                            <p class="card-text">Face covering is mandatory</p>
+                            <span class="sr-only">Face Covering</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-temperature-low" aria-hidden="true"></i></h5>
+                            <p class="card-text">Thermal scanners check on entrance</p>
+                            <span class="sr-only">Thermal scanners</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-hands-wash" aria-hidden="true"></i></h5>
+                            <p class="card-text">Hands disinfection on entrance</p>
+                            <span class="sr-only">Hand sanitiser</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-people-arrows" aria-hidden="true"></i></h5>
+                            <p class="card-text">Social distancing measures</p>
+                            <span class="sr-only">Social distancing</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer class="container-fluid">
-
         <div id="footer-details" class="row">
-            <div class="col-sm-3 about">
+            <div class="col-sm-12 col-md-3 about">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
             </div>
 
-            <div class="col-sm-9 social">
+            <div class="col-sm-12 col-md-5 text-center smlogo">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item small-logo">
                         <i class="fas fa-dumbbell"></i> #SAFEGYM
                         <span class="sr-only">SafeGym Logo</span>
                     </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-12 col-md-4 text-center social">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
