--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"
         type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>SafeGin</title>
+    <title>SafeGym</title>
 </head>
 
 <body>
@@ -47,18 +47,18 @@
     <section class="container-fluid">
 
         <div class="carousel">
-            <div id="carouselCenter" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carousel-center" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/Old_jonathan-borba-zfPOelmDc-M-unsplash.jpg" class="d-block w-100"
+                        <img src="assets/images/jonathan-borba-zfPOelmDc-M-unsplash.jpg" class="d-block w-100"
                             alt="Holding bars">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/Old_matthew-sichkaruk-3qZt1MwF4Zo-unsplash.jpg" class="d-block w-100"
+                        <img src="assets/images/matthew-sichkaruk-3qZt1MwF4Zo-unsplash.jpg" class="d-block w-100"
                             alt="Woman wearing mask squat">
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/Old_gym-center-img.jpg" class="d-block w-100" alt="Gym picture">
+                        <img src="assets/images/Gym-56750-pixahive.jpg" class="d-block w-100" alt="Gym picture">
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
 
         <div class="container-fluid cards price">
             <div class="row justify-content-center">
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 mt-1">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Monthly Plan</h5>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 mt-1">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Annual Plan</h5>
@@ -145,18 +145,23 @@
 
     <footer class="container-fluid">
         <div id="footer-details" class="row">
-            <div class="col-sm-3 about">
+            <div class="col-sm-12 col-md-3 about">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
             </div>
 
-            <div class="col-sm-9 social">
+            <div class="col-sm-12 col-md-5 text-center smlogo">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item small-logo">
                         <i class="fas fa-dumbbell"></i> #SAFEGYM
                         <span class="sr-only">SafeGym Logo</span>
                     </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-12 col-md-4 text-center social">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
