--- a/plans.html
+++ b/plans.html
@@ -45,9 +45,10 @@
     </header>
 
     <section class="container-fluid">
+
         <div class="container cards">
             <div class="row justify-content-center">
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 mt-5">
                     <div class="card price">
                         <div class="card-body">
                             <h5 class="card-title card-plan">Monthly Plan</h5>
@@ -64,10 +65,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
+                <div class="col-sm-6 col-md-4 mt-5">
                     <div class="card price">
                         <div class="card-body">
-                            <span class="badge position-absolute top-0 left-100 translate-middle bg-warning">Best option</span>
+                            <span class="badge position-absolute top-0 left-100 translate-middle bg-warning">Best
+                                option</span>
                             <h5 class="card-title card-plan">Annual Plan</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item">12 Months Contract</li>
@@ -84,23 +86,69 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-fluid cards covid-measures">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4 g-4">
+                <div class="col-sm-3">
+                    <div class="card card-block text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-head-side-mask" aria-hidden="true"></i></h5>
+                            <p class="card-text">Face covering is mandatory</p>
+                            <span class="sr-only">Face Covering</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-temperature-low" aria-hidden="true"></i></h5>
+                            <p class="card-text">Thermal scanners check on entrance</p>
+                            <span class="sr-only">Thermal scanners</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-hands-wash" aria-hidden="true"></i></h5>
+                            <p class="card-text">Hands disinfection on entrance</p>
+                            <span class="sr-only">Hand sanitiser</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-people-arrows" aria-hidden="true"></i></h5>
+                            <p class="card-text">Social distancing measures</p>
+                            <span class="sr-only">Social distancing</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
 
-    <footer class="container-fluid">
-
+    <footer class="container-fluid container-footer">
         <div id="footer-details" class="row">
-            <div class="col-sm-3 about">
+            <div class="col-sm-12 col-md-3 about">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
             </div>
 
-            <div class="col-sm-9 social">
+            <div class="col-sm-12 col-md-5 text-center smlogo">
                 <ul class="list-inline social-links">
                     <li class="list-inline-item small-logo">
                         <i class="fas fa-dumbbell"></i> #SAFEGYM
                         <span class="sr-only">SafeGym Logo</span>
                     </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-12 col-md-4 text-center social">
+                <ul class="list-inline social-links">
                     <li class="list-inline-item">
                         <a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram" aria-hidden="true"></i>
