css adjustments and abstractions

--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
             </div>
         </nav>
 
-        <div class="container-fluid central-logo">
-            <div class="central-logo-icon"><i class="fas fa-dumbbell"></i></div>
-            <div class="central-logo">Stay<span> Safe </span>Gym</div>
+        <div class="container-fluid central-logo font-m">
+            <div class="central-logo-icon font-xxxl"><i class="fas fa-dumbbell"></i></div>
+            <div class="central-logo">Stay<span class="font-xxxl"> Safe </span>Gym</div>
         </div>
     </header>
 
@@ -53,16 +53,16 @@
 
                     <div class="center-form">
                         <form>
-                            <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
+                            <input type="text" name="name" id="fullname" class="form-control name" placeholder="Name"
                                 required />
-                            <input type="email" name="email" id="email" class="form-control" placeholder="Email"
+                            <input type="email" name="e-mail" id="email" class="form-control email" placeholder="Email"
                                 required />
-                            <textarea rows="5" name="comment" id="comment" class="form-control"
+                            <textarea rows="5" name="comment" id="comment" class="form-control comment"
                                 placeholder="Place your comment here!" required></textarea>
                             <div class="form-row text-center">
                                 <div class="col">
-                                    <button type="submit" id="btn-submit" class="btn btn-warning"
-                                        onclick="return confirm('Are you sure?')">Submit</button>
+                                    <button type="submit" id="btn-submit"
+                                        class="btn btn-warning btn-submit">Submit</button>
                                 </div>
 
                             </div>
@@ -72,7 +72,7 @@
             </div>
         </div>
 
-        <div class="address">
+        <div class="address font-xs">
             <p>SafeGyn</p>
             <p>XXI, Jamestown Park Road, Dublin 35</p>
             <p>Dublin Co. Dublin, Ireland</p>
@@ -84,7 +84,7 @@
                 <div class="col-sm-3">
                     <div class="card card-block text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-head-side-mask" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-head-side-mask font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Face covering is mandatory</p>
                             <span class="sr-only">Face Covering</span>
                         </div>
@@ -93,7 +93,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-temperature-low" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-temperature-low font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Thermal scanners check on entrance</p>
                             <span class="sr-only">Thermal scanners</span>
                         </div>
@@ -102,7 +102,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-hands-wash" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-hands-wash font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Hands disinfection on entrance</p>
                             <span class="sr-only">Hand sanitiser</span>
                         </div>
@@ -111,7 +111,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-people-arrows" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-people-arrows font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Social distancing measures</p>
                             <span class="sr-only">Social distancing</span>
                         </div>
@@ -123,16 +123,16 @@
     </section>
 
     <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col-sm-12 col-md-3 about">
+        <div id="footer-details" class="row footer-details font-l">
+            <div class="col-sm-12 col-md-4 about font-xs">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
             </div>
 
-            <div class="col-sm-12 col-md-5 text-center smlogo">
+            <div class="col-sm-12 col-md-4 text-center smlogo">
                 <ul class="list-inline social-links">
-                    <li class="list-inline-item small-logo">
+                    <li class="list-inline-item small-logo font-m">
                         <i class="fas fa-dumbbell"></i> #SAFEGYM
                         <span class="sr-only">SafeGym Logo</span>
                     </li>
