--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand flex-sm-fill" href=""> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
+                <a class="navbar-brand flex-sm-fill font-m" href=""> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,9 +38,9 @@
             </div>
         </nav>
 
-        <div class="container-fluid central-logo">
-            <div class="central-logo-icon"><i class="fas fa-dumbbell"></i></div>
-            <div class="central-logo">Stay<span> Safe </span>Gym</div>
+        <div class="container-fluid central-logo font-m">
+            <div class="central-logo-icon font-xxxl"><i class="fas fa-dumbbell"></i></div>
+            <div class="central-logo">Stay<span class="font-xxxl"> Safe </span>Gym</div>
         </div>
     </header>
 
@@ -105,7 +105,7 @@
                 <div class="col-sm-3">
                     <div class="card card-block text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-head-side-mask" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-head-side-mask font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Face covering is mandatory</p>
                             <span class="sr-only">Face Covering</span>
                         </div>
@@ -114,7 +114,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-temperature-low" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-temperature-low font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Thermal scanners check on entrance</p>
                             <span class="sr-only">Thermal scanners</span>
                         </div>
@@ -123,7 +123,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-hands-wash" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-hands-wash font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Hands disinfection on entrance</p>
                             <span class="sr-only">Hand sanitiser</span>
                         </div>
@@ -132,7 +132,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-people-arrows" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-people-arrows font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Social distancing measures</p>
                             <span class="sr-only">Social distancing</span>
                         </div>
@@ -144,16 +144,16 @@
     </section>
 
     <footer class="container-fluid">
-        <div id="footer-details" class="row">
-            <div class="col-sm-12 col-md-3 about">
+        <div id="footer-details" class="row footer-details font-l">
+            <div class="col-sm-12 col-md-4 about font-xs">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
             </div>
 
-            <div class="col-sm-12 col-md-5 text-center smlogo">
+            <div class="col-sm-12 col-md-4 text-center smlogo">
                 <ul class="list-inline social-links">
-                    <li class="list-inline-item small-logo">
+                    <li class="list-inline-item small-logo font-m">
                         <i class="fas fa-dumbbell"></i> #SAFEGYM
                         <span class="sr-only">SafeGym Logo</span>
                     </li>
