--- a/plans.html
+++ b/plans.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand flex-sm-fill" href="/safe-gym/"> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
+                <a class="navbar-brand flex-sm-fill font-m" href=""> <i class="fas fa-dumbbell"></i> SAFEGYM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,22 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="/safe-gym/">Home</a>
+                            <a class="nav-link" aria-current="page" href="">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/safe-gym/plans.html">Plans</a>
+                            <a class="nav-link active" href="plans.html">Plans</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/safe-gym/contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
 
-        <div class="container-fluid central-logo">
-            <div class="central-logo-icon"><i class="fas fa-dumbbell"></i></div>
-            <div class="central-logo">Stay<span> Safe </span>Gym</div>
+        <div class="container-fluid central-logo font-m">
+            <div class="central-logo-icon font-xxxl"><i class="fas fa-dumbbell"></i></div>
+            <div class="central-logo">Stay<span class="font-xxxl"> Safe </span>Gym</div>
         </div>
     </header>
 
@@ -48,7 +48,7 @@
 
         <div class="container cards">
             <div class="row justify-content-center">
-                <div class="col-sm-6 col-md-4 mt-5">
+                <div class="col-sm-6 col-md-4 mt-4">
                     <div class="card price">
                         <div class="card-body">
                             <h5 class="card-title card-plan">Monthly Plan</h5>
@@ -59,13 +59,13 @@
                                 <li class="list-group-item">No Extra Classes</li>
                                 <li class="list-group-item join-fee">Joining Fee: $20.00</li>
                             </ul>
-                            <p class="card-text card-price bg-warning text-center">$55,00 p/m*</p>
+                            <p class="card-text card-price bg-warning text-center font-s">$55,00 p/m*</p>
                             <p class="card-text text-end">*p/m: Per Month</p>
                             <span class="sr-only">Monthly Plan</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 mt-5">
+                <div class="col-sm-6 col-md-4 mt-4">
                     <div class="card price">
                         <div class="card-body">
                             <span class="badge position-absolute top-0 left-100 translate-middle bg-warning">Best
@@ -78,7 +78,7 @@
                                 <li class="list-group-item">Free Extra Classes</li>
                                 <li class="list-group-item join-fee risk">Joining Fee: $20.00</li>
                             </ul>
-                            <p class="card-text card-price bg-warning text-center">$500,00 p/y*</p>
+                            <p class="card-text card-price bg-warning text-center font-s">$500,00 p/y*</p>
                             <p class="card-text text-end">*p/y: Per Year</p>
                             <span class="sr-only">Annual Plan</span>
                         </div>
@@ -92,7 +92,7 @@
                 <div class="col-sm-3">
                     <div class="card card-block text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-head-side-mask" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-head-side-mask font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Face covering is mandatory</p>
                             <span class="sr-only">Face Covering</span>
                         </div>
@@ -101,7 +101,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-temperature-low" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-temperature-low font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Thermal scanners check on entrance</p>
                             <span class="sr-only">Thermal scanners</span>
                         </div>
@@ -110,7 +110,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-hands-wash" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-hands-wash font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Hands disinfection on entrance</p>
                             <span class="sr-only">Hand sanitiser</span>
                         </div>
@@ -119,7 +119,7 @@
                 <div class="col-sm-3">
                     <div class="card text-center">
                         <div class="card-body">
-                            <h5 class="card-title"><i class="fas fa-people-arrows" aria-hidden="true"></i></h5>
+                            <h5 class="card-title"><i class="fas fa-people-arrows font-xl" aria-hidden="true"></i></h5>
                             <p class="card-text">Social distancing measures</p>
                             <span class="sr-only">Social distancing</span>
                         </div>
@@ -130,17 +130,17 @@
 
     </section>
 
-    <footer class="container-fluid container-footer">
-        <div id="footer-details" class="row">
-            <div class="col-sm-12 col-md-3 about">
+    <footer class="container-fluid">
+        <div id="footer-details" class="row footer-details font-l">
+            <div class="col-sm-12 col-md-4 about font-xs">
                 <p>Opening Hours </p>
                 <p>Mon-Sun</p>
                 <p>6:00-22:00</p>
             </div>
 
-            <div class="col-sm-12 col-md-5 text-center smlogo">
+            <div class="col-sm-12 col-md-4 text-center smlogo">
                 <ul class="list-inline social-links">
-                    <li class="list-inline-item small-logo">
+                    <li class="list-inline-item small-logo font-m">
                         <i class="fas fa-dumbbell"></i> #SAFEGYM
                         <span class="sr-only">SafeGym Logo</span>
                     </li>
